# tensor-ipc

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
config/: victor_cooker_config.json
docs/: api.md  core.md
examples/core_example/: consumer.py  producer.py
examples/ros_example/: consumer.py  producer.py
scripts/: cleanup_ipc.py
src/poly-ipc/: __init__.py  metadata.py  posix_ipc.py
src/poly-ipc/backends/: __init__.py  base_backend.py  numpy_backend.py  torch_backend.py  torch_backend_old.py
src/poly-ipc/core/: consumer.py  dds.py  producer.py
src/poly-ipc/ros/: ros_typing.py
src/tensor_ipc/: __init__.py  metadata.py  utils.py
src/tensor_ipc/backends/: __init__.py  base_backend.py  numpy_backend.py  torch_backend.py  torch_backend_cuda.py  torch_cuda_backend.py
src/tensor_ipc/core/: consumer.py  dds.py  metadata.py  mplock.py  producer.py
src/tensor_ipc/rosext/: __init__.py  pool2ros_producer.py  ros2pool_consumer.py  ros_utils.py
tests/: base_test.py  example_consumer.py  example_producer.py  requirements.txt  test_backend.py  test_dds.py  test_numpy_backend.py  test_prod_consum.py  test_torch_cuda_backend.py
tests/prod_consum_daemon/: config.json  consumer_daemon.py  producer_daemon.py  results.json
tests/test_torch_cuda/: consumer.py  producer.py  test_torch_cuda.py
